fixed issue with white space under footer

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ button:hover {
 
 main {
   background-color: var(--accent-light);
-  /* height: 80vh; */
+  height: fit-content;
 }
 
 .container {
@@ -201,6 +201,9 @@ footer {
   }
 
   /*Layout*/
+  main {
+    height: 80vh;
+  }
   .container {
     width: 80%;
   }
